<?xml version="1.0"?>
<package>
  <name>otl_pepper_apps</name>
  <version>0.0.0</version>
  <description>The otl_pepper_apps package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/otl_pepper_apps</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ros_myo</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>naoqi_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
